add footer and header

--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+<header class="header">
+    <div class="container header-content">
+        <h1 class="logo">Gadget store</h1>
+        <nav>
+            <a href="#">Каталог</a>
+            <a href="#">О нас</a>
+            <a href="#">Контакты</a>
+        </nav>
+    </div>
+</header>
 
-<h1>Каталог товаров</h1>
-
+<main class="container">
 <div class="catalog">
 
   <div class="card" data-name="iPhone 6s 64Gb">
@@ -104,6 +113,7 @@
     </div>
   </div>
 </div>
+</main>
 
 <div class="modal" id="modal">
     <div class="modal-content">
@@ -115,6 +125,13 @@
         <button>Отправить</button>
     </div>
 </div>
+
+<footer class="footer">
+    <div class="container footer-content">
+        <p>&copy; 2026 Gadget store. Все права защищены.</p>
+    </div>
+</footer>
+
 <script src="script.js"></script>
 </body>
 </html>
